@@ -1,7 +1,7 @@
 /* -*- C++ -*- */
 //=============================================================================
 /**
- *  @file   Filter.h
+ *  @file   ExtendedFilter.h
  *
  *  $Id$
  *
